--- a/app/src/main/res/layout/fragment_cheat.xml
+++ b/app/src/main/res/layout/fragment_cheat.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="com.bignerdranch.android.geoquiz.CheatActivity">
+    tools:context="com.bignerdranch.android.geoquiz.CheatFragment">
 
     <TextView
         android:layout_width="wrap_content"
